force-app/main/default/objects/Design_Knowledge__c/Design_Knowledge__c.object-meta.xml
<CustomObject>
    <label>設計ナレッジ</label>
    <nameField>
        <label>ナレッジタイトル</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>設計ナレッジ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>