force-app/main/default/objects/Design_Knowledge__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_Knowledges</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>