force-app/main/default/objects/Design_Knowledge__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <label>承認日</label>
    <type>Date</type>
</CustomField>