force-app/main/default/objects/Design_Knowledge__c/fields/Design_Guideline__c.field-meta.xml
<CustomField>
    <fullName>Design_Guideline__c</fullName>
    <label>設計指針</label>
    <type>Html</type>
    <length>10000</length>
</CustomField>