force-app/main/default/objects/Design_Knowledge__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <label>検索キーワード</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>