force-app/main/default/objects/Design_Knowledge__c/fields/Lesson__c.field-meta.xml
<CustomField>
    <fullName>Lesson__c</fullName>
    <label>教訓</label>
    <type>Html</type>
    <length>10000</length>
</CustomField>