force-app/main/default/objects/Design_Knowledge__c/fields/Procurement_Guideline__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Guideline__c</fullName>
    <label>調達指針</label>
    <type>Html</type>
    <length>10000</length>
</CustomField>