force-app/main/default/objects/Design_Knowledge__c/fields/Source_CA__c.field-meta.xml
<CustomField>
    <fullName>Source_CA__c</fullName>
    <label>元の是正措置</label>
    <referenceTo>Corrective_Action__c</referenceTo>
    <relationshipName>Design_Knowledges</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>