force-app/main/default/objects/Design_Knowledge__c/fields/Source_CAs__c.field-meta.xml
<CustomField>
    <fullName>Source_CAs__c</fullName>
    <label>参照元の是正措置</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>