force-app/main/default/objects/Design_Knowledge__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>ドラフト</fullName><default>true</default><label>ドラフト</label></value>
            <value><fullName>レビュー中</fullName><default>false</default><label>レビュー中</label></value>
            <value><fullName>承認済</fullName><default>false</default><label>承認済</label></value>
            <value><fullName>廃止</fullName><default>false</default><label>廃止</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>